# campus-cli

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
campus_cli/: __init__.py  api.py  cli.py  config.py  credentials.py
campus_cli/auth/: __init__.py  client.py  common.py  login.py  vault.py
campus_cli/utils/: __init__.py  output.py
docs/: PRD.md  plan.md
tests/: __init__.py  test_cli.py  test_config.py  test_credentials.py  test_output.py
